Ensure code block bleed margins match other elements

--- a/styles/syntax-highlighting.css
+++ b/styles/syntax-highlighting.css
@@ -6,7 +6,7 @@
  */
 div[data-rehype-pretty-code-fragment] {
   overflow: hidden;
-  @apply my-8 rounded-lg bg-white/5 leading-6 shadow-surface-elevation-low lg:-mx-8;
+  @apply my-8 rounded-lg bg-white/5 leading-6 shadow-surface-elevation-low lg:-mx-12;
 }
 
 div[data-rehype-pretty-code-fragment] pre {
